<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="0dp"
            android:paddingEnd="4dp"
            android:stretchColumns="2"
            app:layout_constraintEnd_toEndOf="@+id/descriptionTextView"
            app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/publish_date"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/publishDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textSize="14sp"
                    tools:text="Jan 01 1991" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/source"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/sourceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:scrollHorizontally="true"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textSize="14sp"
                    tools:text="BBC" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/author"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/authorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:scrollHorizontally="true"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textSize="14sp"
                    tools:text="John Smith" />
        </TableRow>

    </TableLayout>


    <TextView
            android:id="@+id/sourceUrlTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/tableLayout"
            app:layout_constraintStart_toStartOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            tools:text="http://www.bbc-news.com/1" />


    <ImageView
            android:id="@+id/newsImage"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/news_image_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_image" />

    <TextView
            android:id="@+id/headlineTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsImage"
            tools:text="Sample title for news title that will" />

    <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/headlineTextView"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="@+id/headlineTextView"
            app:layout_constraintTop_toBottomOf="@+id/headlineTextView"
            tools:text="Sample title for news title that will and this will display how text shows up on the news app" />

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ShareButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourceUrlTextView"/>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/ShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="@+id/SaveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/SaveButton"
            app:layout_constraintTop_toTopOf="@+id/SaveButton"/>

</android.support.constraint.ConstraintLayout>
