<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="HOME"/>

    <item
            android:id="@+id/saved"
            android:title="SAVED"/>

    <item
            android:id="@+id/shared"
            android:title="SHARED"/>

</menu>